--- a/main .tex
+++ b/main .tex
@@ -3,12 +3,14 @@
 
 %%For Cambridge soft-bound version
 \documentclass[hyperpdf,bindnopdf]{hepthesis}
+\usepackage{notoccite}
 
 %% For Cambridge hard-bound version (must be one-sided)
 %\documentclass[hyperpdf,oneside]{hepthesis}
 
 %%-----Load packages
 \input{load_packages.tex}
+\input{Style/symbol-commands.tex}
 
 %%-----Global line spacing
 %\setallspacing{double}
