--- a/mythesis.bib
+++ b/mythesis.bib
@@ -1325,7 +1325,7 @@ keywords = "Dark matter, WIMP, Two-phase, Xenon, Discriminating",
 }
 
 %%---------------------%%
-%%----- CHAPTER 1 -----%%
+%%----- CHAPTER 2 -----%%
 %%---------------------%%
 
 
@@ -1453,4 +1453,830 @@ author = "Keiko Fujii and Yuya Endo and Yui Torigoe and Shogo Nakamura and Tomiy
   publisher = {American Physical Society},
   doi = {10.1103/PhysRev.166.871},
   url = {https://link.aps.org/doi/10.1103/PhysRev.166.871}
+}
+
+%% Lindhard theory
+@article{Lindhard,
+  title = {RANGE CONCEPTS AND HEAVY ION RANGES (NOTES ON ATOMIC COLLISIONS, II)},
+  author = {Lindhard, J. and Scharff, M. and Schioett, H.E.},
+  abstractNote = {},
+  doi = {},
+  journal = {Kgl. Danske Videnskab. Selskab. Mat. Fys. Medd.},
+  number = ,
+  volume = Vol: 33: No. 14,
+  place = {Country unknown/Code not available},
+  year = {1963},
+  month = {1}
+}
+
+%% LUX Tritium
+@article{lux_tritium,
+   title={Tritium calibration of the LUX dark matter experiment},
+   volume={93},
+   ISSN={2470-0029},
+   url={http://dx.doi.org/10.1103/PhysRevD.93.072009},
+   DOI={10.1103/physrevd.93.072009},
+   number={7},
+   journal={Physical Review D},
+   publisher={American Physical Society (APS)},
+   author={Akerib, D. S. and Araújo, H. M. and Bai, X. and Bailey, A. J. and Balajthy, J. and Beltrame, P. and Bernard, E. P. and Bernstein, A. and Biesiadzinski, T. P. and Boulton, E. M. and et al.},
+   year={2016},
+   month={Apr}
+}
+
+%% LUX ultra-low energy calibration
+@article{lux_low_energy_cal,
+      author         = "Akerib, D. S. and others",
+      title          = "{Ultralow energy calibration of LUX detector using
+                        $^{127}$Xe electron capture}",
+      collaboration  = "LUX",
+      journal        = "Phys. Rev.",
+      volume         = "D96",
+      year           = "2017",
+      number         = "11",
+      pages          = "112011",
+      doi            = "10.1103/PhysRevD.96.112011",
+      eprint         = "1709.00800",
+      archivePrefix  = "arXiv",
+      primaryClass   = "physics.ins-det",
+      SLACcitation   = "%%CITATION = ARXIV:1709.00800;%%"
+}
+
+%% PIXeY measurements
+@article{PIXeY,
+      author         = "Boulton, E. M. and others",
+      title          = "{Calibration of a two-phase xenon time projection chamber
+                        with a $^{37}$Ar source}",
+      journal        = "JINST",
+      volume         = "12",
+      year           = "2017",
+      number         = "08",
+      pages          = "P08004",
+      doi            = "10.1088/1748-0221/12/08/P08004",
+      eprint         = "1705.08958",
+      archivePrefix  = "arXiv",
+      primaryClass   = "physics.ins-det",
+      SLACcitation   = "%%CITATION = ARXIV:1705.08958;%%"
+}
+
+%% Ibles Thesis
+@phdthesis{ibles,
+      author         = "Ibles Olcina Samblas",
+      title          = "{A statistical framework for the characterisation of WIMP dark matter with the LUX-ZEPLIN experiment}",
+      school         = "Imperial College London",
+      year           = "2019",
+      url            ="",
+}
+
+%% NEST Paper 1
+@article{Szydagis_2011,
+   title={NEST: a comprehensive model for scintillation yield in liquid xenon},
+   volume={6},
+   ISSN={1748-0221},
+   url={http://dx.doi.org/10.1088/1748-0221/6/10/P10002},
+   DOI={10.1088/1748-0221/6/10/p10002},
+   number={10},
+   journal={Journal of Instrumentation},
+   publisher={IOP Publishing},
+   author={Szydagis, M and Barry, N and Kazkaz, K and Mock, J and Stolp, D and Sweany, M and Tripathi, M and Uvarov, S and Walsh, N and Woods, M},
+   year={2011},
+   month={Oct},
+   pages={P10002–P10002}
+}
+
+%% NEST Paper 2
+@article{Mock_2014,
+   title={Modeling pulse characteristics in Xenon with NEST},
+   volume={9},
+   ISSN={1748-0221},
+   url={http://dx.doi.org/10.1088/1748-0221/9/04/T04002},
+   DOI={10.1088/1748-0221/9/04/t04002},
+   number={04},
+   journal={Journal of Instrumentation},
+   publisher={IOP Publishing},
+   author={Mock, J and Barry, N and Kazkaz, K and Stolp, D and Szydagis, M and Tripathi, M and Uvarov, S and Woods, M and Walsh, N},
+   year={2014},
+   month={Apr},
+   pages={T04002–T04002}
+}
+
+%% Geant4
+@article{Geant4,
+      author         = "Agostinelli, S. and others",
+      title          = "{GEANT4: A Simulation toolkit}",
+      collaboration  = "GEANT4",
+      journal        = "Nucl. Instrum. Meth.",
+      volume         = "A506",
+      year           = "2003",
+      pages          = "250-303",
+      doi            = "10.1016/S0168-9002(03)01368-8",
+      reportNumber   = "SLAC-PUB-9350, FERMILAB-PUB-03-339",
+      SLACcitation   = "%%CITATION = NUIMA,A506,250;%%"
+}
+
+%% NEST v.2
+@misc{nest_v2,
+      author         = "J. Brodsky and others",
+      title          = "Noble Element Simulation Technique (Code)",
+      howpublished   = "\url{https://github.com/NESTCollaboration/nest}",
+}
+
+%% Signal yields in LUX
+@article{lux_signal_yields,
+   title={Signal yields, energy resolution, and recombination fluctuations in liquid xenon},
+   volume={95},
+   ISSN={2470-0029},
+   url={http://dx.doi.org/10.1103/PhysRevD.95.012008},
+   DOI={10.1103/physrevd.95.012008},
+   number={1},
+   journal={Physical Review D},
+   publisher={American Physical Society (APS)},
+   author={Akerib, D. S. and Alsum, S. and Araújo, H. M. and Bai, X. and Bailey, A. J. and Balajthy, J. and Beltrame, P. and Bernard, E. P. and Bernstein, A. and Biesiadzinski, T. P. and et al.},
+   year={2017},
+   month={Jan}
+}
+
+%% SECTION 2.3 The LUX-ZEPLIN Experiment
+
+%% LUX Experiment
+@article{LUX_experiment,
+   title={The Large Underground Xenon (LUX) experiment},
+   volume={704},
+   ISSN={0168-9002},
+   url={http://dx.doi.org/10.1016/j.nima.2012.11.135},
+   DOI={10.1016/j.nima.2012.11.135},
+   journal={Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment},
+   publisher={Elsevier BV},
+   author={Akerib, D.S. and Bai, X. and Bedikian, S. and Bernard, E. and Bernstein, A. and Bolozdynya, A. and Bradley, A. and Byram, D. and Cahn, S.B. and Camp, C. and et al.},
+   year={2013},
+   month={Mar},
+   pages={111–126}
+}
+
+%% LZ Titanium
+@article{LZ_titanium_selection,
+   title={Identification of radiopure titanium for the LZ dark matter experiment and future rare event searches},
+   volume={96},
+   ISSN={0927-6505},
+   url={http://dx.doi.org/10.1016/j.astropartphys.2017.09.002},
+   DOI={10.1016/j.astropartphys.2017.09.002},
+   journal={Astroparticle Physics},
+   publisher={Elsevier BV},
+   author={Akerib, D.S. and Akerlof, C.W. and Akimov, D.Yu. and Alsum, S.K. and Araújo, H.M. and Arnquist, I.J. and Arthurs, M. and Bai, X. and Bailey, A.J. and Balajthy, J. and et al.},
+   year={2017},
+   month={Nov},
+   pages={1–10}
+}
+
+%% PTFE Reflectivity
+@article{Neves_2017,
+   title={Measurement of the absolute reflectance of polytetrafluoroethylene (PTFE) immersed in liquid xenon},
+   volume={12},
+   ISSN={1748-0221},
+   url={http://dx.doi.org/10.1088/1748-0221/12/01/P01017},
+   DOI={10.1088/1748-0221/12/01/p01017},
+   number={01},
+   journal={Journal of Instrumentation},
+   publisher={IOP Publishing},
+   author={Neves, F. and Lindote, A. and Morozov, A. and Solovov, V. and Silva, C. and Bras, P. and Rodrigues, J.P. and Lopes, M.I.},
+   year={2017},
+   month={Jan},
+   pages={P01017–P01017}
+}
+
+%% Gadolinium-loaded liquid scintillator technology
+@article{YEH2007329,
+title = "Gadolinium-loaded liquid scintillator for high-precision measurements of antineutrino oscillations and the mixing angle, θ13",
+journal = "Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment",
+volume = "578",
+number = "1",
+pages = "329 - 339",
+year = "2007",
+issn = "0168-9002",
+doi = "https://doi.org/10.1016/j.nima.2007.03.029",
+url = "http://www.sciencedirect.com/science/article/pii/S0168900207006511",
+author = "M. Yeh and A. Garnov and R.L. Hahn",
+}
+
+%% LZ Sensitivity Paper
+@article{akerib2018projected,
+      author         = "Akerib, D. S. and others",
+      title          = "{Projected WIMP Sensitivity of the LUX-ZEPLIN (LZ) Dark
+                        Matter Experiment}",
+      collaboration  = "LUX-ZEPLIN",
+      year           = "2018",
+      eprint         = "1802.06039",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph.IM",
+      reportNumber   = "FERMILAB-PUB-18-054-AE-PPD",
+      SLACcitation   = "%%CITATION = ARXIV:1802.06039;%%"
+}
+
+%% DD neutron gun with LUX
+@article{lux_dd,
+      author         = "Akerib, D. S. and others",
+      title          = "{Low-energy (0.7-74 keV) nuclear recoil calibration of
+                        the LUX dark matter experiment using D-D neutron
+                        scattering kinematics}",
+      collaboration  = "LUX",
+      year           = "2016",
+      eprint         = "1608.05381",
+      archivePrefix  = "arXiv",
+      primaryClass   = "physics.ins-det",
+      SLACcitation   = "%%CITATION = ARXIV:1608.05381;%%"
+}
+
+
+%%---------------------%%
+%%----- CHAPTER 3 -----%%
+%%---------------------%%
+
+%% SECTION 3.1 %%
+
+%% Radon plate-out
+@article{Bruemmer_2015,
+   title={Studies on the reduction of radon plate-out},
+   url={http://dx.doi.org/10.1063/1.4928021},
+   DOI={10.1063/1.4928021},
+   publisher={AIP Publishing LLC},
+   author={Bruemmer, M. and Nakib, M. and Calkins, R. and Cooley, J. and Sekula, S.},
+   year={2015}
+}
+
+%% Radon daughter plate-out measurements at SNOLAB
+@article{Stein_2018,
+   title={Radon daughter plate-out measurements at SNOLAB for polyethylene and copper},
+   volume={880},
+   ISSN={0168-9002},
+   url={http://dx.doi.org/10.1016/j.nima.2017.10.054},
+   DOI={10.1016/j.nima.2017.10.054},
+   journal={Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment},
+   publisher={Elsevier BV},
+   author={Stein, Matthew and Bauer, Dan and Bunker, Ray and Calkins, Rob and Cooley, Jodi and Loer, Ben and Scorza, Silvia},
+   year={2018},
+   month={Feb},
+   pages={92–97}
+}
+
+%% LZ TDR
+@article{lz_tdr,
+      author         = "Mount, B. J. and others",
+      title          = "{LUX-ZEPLIN (LZ) Technical Design Report}",
+      year           = "2017",
+      eprint         = "1703.09144",
+      archivePrefix  = "arXiv",
+      primaryClass   = "physics.ins-det",
+      reportNumber   = "LBNL-1007256, FERMILAB-TM-2653-AE-E-PPD",
+      SLACcitation   = "%%CITATION = ARXIV:1703.09144;%%"
+}
+
+%% Radiogenic and Muon-Induced Backgrounds in the LUX
+@article{radiogenic_muon_lux,
+      author         = "Akerib, D. S. and others",
+      title          = "{Radiogenic and Muon-Induced Backgrounds in the LUX Dark Matter Detector}",
+      journal        = "Astropart. Phys.",
+      volume         = "62",
+      year           = "2015",
+      pages          = "33-46",
+      doi            = "10.1016/j.astropartphys.2014.07.009",
+      eprint         = "1403.1299",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph.IM",
+      SLACcitation   = "%%CITATION = ARXIV:1403.1299;%%"
+}
+
+%% Cosmic ray flux at SURF
+@article{surf_muon_flux,
+      author         = "Gray, F. E. and Ruybal, C. and Totushek, J. and Mei, D.
+                        -M. and Thomas, K. and Zhang, C.",
+      title          = "{Cosmic Ray Muon Flux at the Sanford Underground
+                        Laboratory at Homestake}",
+      journal        = "Nucl. Instrum. Meth.",
+      volume         = "A638",
+      year           = "2011",
+      pages          = "63-66",
+      doi            = "10.1016/j.nima.2011.02.032",
+      eprint         = "1007.1921",
+      archivePrefix  = "arXiv",
+      primaryClass   = "nucl-ex",
+      SLACcitation   = "%%CITATION = ARXIV:1007.1921;%%"
+}
+
+%% Muon flux — Davis
+@article{muon_davis,
+      author         = "Mei, Dongming and Hime, A.",
+      title          = "{Muon-induced background study for underground
+                        laboratories}",
+      journal        = "Phys. Rev.",
+      volume         = "D73",
+      year           = "2006",
+      pages          = "053004",
+      doi            = "10.1103/PhysRevD.73.053004",
+      eprint         = "astro-ph/0512125",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph",
+      reportNumber   = "LA-UP-05-3704",
+      SLACcitation   = "%%CITATION = ASTRO-PH/0512125;%%"
+}
+
+%% Radioactive backgrounds in cryogenic experiments
+@article{TOMASELLO201070,
+    title = "Radioactive background in a cryogenic dark matter experiment",
+    journal = "Astroparticle Physics",
+    volume = "34",
+    number = "2",
+    pages = "70 - 79",
+    year = "2010",
+    issn = "0927-6505",
+    doi = "https://doi.org/10.1016/j.astropartphys.2010.05.005",
+    url = "http://www.sciencedirect.com/science/article/pii/S0927650510001015",
+    author = "V. Tomasello and M. Robinson and V.A. Kudryavtsev",
+    keywords = "Radioactivity, Neutron background, Gamma-ray background, Dark matter, WIMPs, Monte Carlo simulations",
+}
+
+%% SECTION 3.2 %%
+
+%% BUGs (Boulby)
+@article{bugs_boulby,
+      author         = "Scovell, P. R. and others",
+      title          = "{Low Background Gamma Spectroscopy at the Boulby
+                        Underground Laboratory}",
+      journal        = "Astropart. Phys.",
+      volume         = "97",
+      year           = "2018",
+      pages          = "160-173",
+      doi            = "10.1016/j.astropartphys.2017.11.006",
+      eprint         = "1708.06086",
+      archivePrefix  = "arXiv",
+      primaryClass   = "physics.ins-det",
+      SLACcitation   = "%%CITATION = ARXIV:1708.06086;%%"
+}
+
+%% ICP-MS (Jim)
+@article{icpms_ucl,
+      author         = "Dobson, J. and Ghag, C. and Manenti, L.",
+      title          = "{Ultra-low background mass spectrometry for rare-event
+                        searches}",
+      journal        = "Nucl. Instrum. Meth.",
+      volume         = "A879",
+      year           = "2018",
+      pages          = "25-30",
+      doi            = "10.1016/j.nima.2017.10.014",
+      eprint         = "1708.08860",
+      archivePrefix  = "arXiv",
+      primaryClass   = "physics.ins-det",
+      SLACcitation   = "%%CITATION = ARXIV:1708.08860;%%"
+}
+
+%% Practical Gamma-ray Spectroscopy
+@book{gilmore2011practical,
+  title={Practical Gamma-ray Spectroscopy},
+  author={Gilmore, G.},
+  isbn={9781119964698},
+  url={https://books.google.co.uk/books?id=S0Dy4hjkmmMC},
+  year={2011},
+  publisher={Wiley}
+}
+
+%% ZEPLIN--II & ZEPLIN--III experients
+%***[11]
+@article{Alner:2007ja,
+      author         = "Alner, G. J. and others",
+      title          = "{First limits on WIMP nuclear recoil signals in ZEPLIN-II: A two phase xenon detector for dark matter detection}",
+      journal        = "{Astropart. Phys.}",
+      volume         = "{28}",
+      year           = "{2007}",
+      pages          = "{287-302}",
+      doi            = "{10.1016/j.astropartphys.2007.06.002}",
+      eprint         = "{astro-ph/0701858}",
+      archivePrefix  = "{arXiv}",
+      primaryClass   = "{ASTRO-PH}",
+      SLACcitation   = "{%%CITATION = ASTRO-PH/0701858;%%}"
+}
+
+%***[12]
+@article{Araujo:2011as,
+      author         = "Ara{\'u}jo, H. M. and others",
+      title          = "{Radioactivity Backgrounds in ZEPLIN-III}",
+      journal        = "{Astropart. Phys.}",
+      volume         = "{35}",
+      year           = "{2012}",
+      pages          = "{495-502}",
+      doi            = "{10.1016/j.astropartphys.2011.11.001}",
+      eprint         = "{1104.3538}",
+      archivePrefix  = "{arXiv}",
+      primaryClass   = "{physics.ins-det}",
+      SLACcitation   = "{%%CITATION = ARXIV:1104.3538;%%}"
+}
+
+%% Measuring and understanding radon adsorption in microporous materials
+@article{Noel:2015nla,
+      author         = "Noel, Raymond and others",
+      title          = "{Measuring and understanding radon adsorption in microporous materials}",
+      booktitle      = "{Proceedings, 5th Topical Workshop on Low Radioactivity
+                        Techniques (LRT 2015): Seattle, WA, USA, March 18-20,
+                        2015}",
+      journal        = "{AIP Conf. Proc.}",
+      volume         = "{1672}",
+      year           = "{2015}",
+      number         = "{1}",
+      pages          = "{070001}",
+      doi            = "{10.1063/1.4927992}",
+      SLACcitation   = "{%%CITATION = APCPC,1672,070001;%%}"
+}
+
+%% Black Hills State University Underground Campus
+@article{Mount:2017iam,
+      author         = "Mount, Brianna J. and others",
+      title          = "{Black Hills State University Underground Campus}",
+      journal        = "{Appl. Radiat. Isot.}",
+      volume         = "{126}",
+      year           = "{2017}",
+      pages          = "{130-133}",
+      doi            = "{10.1016/j.apradiso.2017.02.025}",
+      SLACcitation   = "{%%CITATION = ARISE,126,130;%%}"
+}
+
+%% Low Background Counting at LBNL
+@article{Smith:2015aoa,
+      author         = "Smith, A. R. and others",
+      title          = "{Low Background Counting at LBNL}",
+      booktitle      = "{Proceedings, 13th International Conference on Topics in Astroparticle and Underground Physics (TAUP 2013): Asilomar, California, September 8-13, 2013}",
+      journal        = "{Phys. Procedia}",
+      volume         = "{61}",
+      year           = "{2015}",
+      pages          = "{787-795}",
+      doi            = "{10.1016/j.phpro.2014.12.101}",
+      SLACcitation   = "{%%CITATION = INSPIRE-1357772;%%}"
+}
+
+
+%% GEANT4 models of HPGe detectors for radioassay
+@article{Tsang:2019apx,
+      author         = "Tsang, R. H. M. and others",
+      title          = "{GEANT4 models of HPGe detectors for radioassay}",
+      journal        = "{Nucl. Instrum. Meth.}",
+      volume         = "{A935}",
+      year           = "{2019}",
+      pages          = "{75-82}",
+      doi            = "{10.1016/j.nima.2019.04.085}",
+      eprint         = "{1902.06847}",
+      archivePrefix  = "{arXiv}",
+      primaryClass   = "{physics.ins-det}",
+      SLACcitation   = "{%%CITATION = ARXIV:1902.06847;%%}"
+}
+
+%% LZ Screening Paper
+@article{lz_screening,
+      author         = "D.S. Akeriba, C.W. Akerlof, D. Yu. Akimov and others",
+      title          = "{The LUX-ZEPLIN (LZ) radioactivity and cleanliness control                    programs}",
+      journal        = "",
+      volume         = "",
+      year           = "2020",
+      doi            = "",
+      eprint         = "",
+      archivePrefix  = "",
+      primaryClass   = "",
+      SLACcitation   = ""
+}
+
+%% Primordial Radionuclide Chain Disequilibrium
+@article{Malling:2013jya,
+      author         = "Malling, D. C. and others",
+      title          = "{Dark Matter Search Backgrounds from Primordial Radionuclide Chain Disequilibrium}",
+      year           = "{2013}",
+      eprint         = "{1305.5183}",
+      archivePrefix  = "{arXiv}",
+      primaryClass   = "{astro-ph.IM}",
+      SLACcitation   = "{%%CITATION = ARXIV:1305.5183;%%}"
+}
+
+
+%% Radon-proof bagging
+@article{Meng:2019ker,
+      author         = "Meng, Yue and others",
+      title          = "{A New Method for Evaluating the Effectiveness of Plastic Packaging Against Radon Penetration}",
+      year           = "{2019}",
+      eprint         = "{1903.02643}",
+      archivePrefix  = "{arXiv}",
+      primaryClass   = "{physics.ins-det}",
+      SLACcitation   = "{%%CITATION = ARXIV:1903.02643;%%}"
+}
+
+%% Image software
+@article{DBLP:journals/corr/RuedenSHDWE17,
+      author        = "Curtis T. Rueden and others",
+      title         = "{ImageJ2: ImageJ for the next generation of scientific image data}",
+      journal       = "{CoRR}",
+      volume        = "{abs/1701.05940}",
+      year          = "{2017}",
+      archivePrefix = "{arXiv}",
+      eprint        = "{1701.05940}",
+      timestamp     = "{Mon, 13 Aug 2018 16:45:58 +0200}",
+      bibsource     = "{dblp computer science bibliography, https://dblp.org}"
+}
+
+%% Dust screening and cleanliness
+@article{borson2005iest,
+      title         ="{IEST-STD-CC1246D: product cleanliness levels and contamination control program}",
+      author        ="Borson, E.N.",
+      journal       ="{Institute of Environmental Sciences and Technology}",
+      year          ="{2005}"
+}
+
+%% SNO Collaboration
+@article{Boger:1999bb,
+      author         = "Boger, J. and others",
+      title          = "{The Sudbury neutrino observatory}",
+      collaboration  = "{SNO}",
+      journal        = "{Nucl. Instrum. Meth.}",
+      volume         = "{A449}",
+      year           = "{2000}",
+      pages          = "{172-207}",
+      doi            = "{10.1016/S0168-9002(99)01469-2}",
+      eprint         = "{nucl-ex/9910016}",
+      archivePrefix  = "{arXiv}",
+      primaryClass   = "{nucl-ex}",
+      reportNumber   = "{SNO-STR-99-025}",
+      SLACcitation   = "{%%CITATION = NUCL-EX/9910016;%%}"
+}
+
+%% SNO cleanliness program
+@TechReport{stokstad:1991,
+      Author	= "E. Douglas Hallman and Robert G. Stokstad",
+      Title		= "{Establishing a Cleanliness Program and Specifications for the Sudbury Neutrino Observatory}",
+      Institution	= "{Sudbury Neutrino Observatory, Department of Physics, Stirling Hall, Queen's University at Kingston, Kingston, Ontario, Canada K7L 3N6}",
+      Year		= "{1991}",
+      Number	= "{SNO-STR-91-009}"
+}
+
+%% Jacobi Model
+@article{jacobi1972activity,
+      title         = "{Activity and Potential Alpha-energy of 222 Radon and 220 Radon-daughters in Different Air Atmospheres}",
+      author        = "Jacobi, W",
+      journal       = "{Health Physics}",
+      volume        = "{22}",
+      number        = "{5}",
+      pages         = "{441--450}",
+      year          = "{1972}",
+      publisher     = "{LWW}"
+}
+
+%%--
+@article{knutson1988modeling,
+      title="{Modeling indoor concentrations of radon decay products}",
+      author="Knutson, E. O.",
+      journal="{Radon and its decay products in indoor air}",
+      pages="{161--202}",
+      year="{1988}",
+      publisher="{Wiley New York}"
+}
+
+%% Triboelectric series
+@article{zou:2019tde,
+	Author = "Zou, Haiyang and others",
+	Doi = "{10.1038/s41467-019-09461-x}",
+	Journal = "{Nature Communications}",
+	Number = "{1}",
+	Pages = "{1427}",
+	Title = "{Quantifying the triboelectric series}",
+	Volume = "{10}",
+	Year = "{2019}"
+}
+
+%% PTFE charging
+@article{Morrison:2017xul,
+      author         = "Morrison, Eric S. and others",
+      title          = "{Radon Daughter Plate-out onto Teflon}",
+      booktitle      = "{Proceedings, 6th Topical Workshop on Low Radioactivity Techniques (LRT 2017): Seoul, Korea, May 24-26, 2017}",
+      journal        = "{AIP Conf. Proc.}",
+      volume         = "{1921}",
+      year           = "{2018}",
+      number         = "{1}",
+      pages          = "{090002}",
+      doi            = "{10.1063/1.5019012}",
+      eprint         = "{1708.08534}",
+      archivePrefix  = "{arXiv}",
+      primaryClass   = "{physics.ins-det}",
+      SLACcitation   = "{%%CITATION = ARXIV:1708.08534;%%}"
+}
+
+%% Gamma rays from U and Th series
+@book{MolnarGabor.1997,
+author = {{Molnár Gábor.} and {Belgya Tamás.} and {Révay Zsolt.} and {International Symposium on Capture Gamma-Ray Spectroscopy and Related Topics (9.) (Budapest) (1996)}},
+isbn = {9637775552},
+publisher = {Springer},
+title = {{Proceedings of the 9. International Symposium on Capture Gamma-Ray Spectroscopy and Related Topics : Budapest, 8-12 October 1996}},
+url = {https://inis.iaea.org/search/search.aspx?orig{\_}q=RN:29027738},
+year = {1997}
+}
+
+%% Davis cavern rock formation
+@article{Heise_2015,
+   title={The Sanford Underground Research Facility at Homestake},
+   volume={606},
+   ISSN={1742-6596},
+   url={http://dx.doi.org/10.1088/1742-6596/606/1/012015},
+   DOI={10.1088/1742-6596/606/1/012015},
+   journal={Journal of Physics: Conference Series},
+   publisher={IOP Publishing},
+   author={Heise, J},
+   year={2015},
+   month={May},
+   pages={012015}
+}
+
+%% Resolution model
+@article{An:2016ses,
+      author         = "An, Feng Peng and others",
+      title          = "{Measurement of electron antineutrino oscillation based on 1230 days of operation of the Daya Bay experiment}",
+      collaboration  = "Daya Bay",
+      journal        = "Phys. Rev.",
+      volume         = "D95",
+      year           = "2017",
+      number         = "7",
+      pages          = "072006",
+      doi            = "10.1103/PhysRevD.95.072006",
+      eprint         = "1610.04802",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      SLACcitation   = "%%CITATION = ARXIV:1610.04802;%%"
+}
+
+%% NaI(Tl) contamination
+@article{Kim:2014toa,
+    author = "Kim, K.W. and others",
+    archivePrefix = "arXiv",
+    doi = "10.1016/j.astropartphys.2014.10.004",
+    eprint = "1407.1586",
+    journal = "Astropart. Phys.",
+    pages = "249--257",
+    primaryClass = "astro-ph.IM",
+    title = "{Tests on NaI(Tl) crystals for WIMP search at the Yangyang Underground Laboratory}",
+    volume = "62",
+    year = "2015"
+}
+
+%% Livermore Physics 
+@article{osti_295438,
+    title = {EPDL97: the evaluated photo data library `97 version},
+    author = {Cullen, D E and Hubbell, J H and Kissel, L},
+    abstractNote = {The Evaluated Photon Data Library, 1997 version (EPLD97), is designed for use in photon transport calculations at Lawrence Livermore National Laboratory. This library includes photon interaction data for all elements with atomic number between Z = 1 (hydrogne) and 100 (fermium), including: photoionization, photoexcitation, coherent and incoherent scattering, and pair and triplet porduction cross sections. For use in applications data is provided for all elements over the energy range 1 eV to 100 GeV. This report documents the sources and treatment of the data included inthis library. EPDL97 completely supersedes the earlier 1989 version of EPDL and it is highly recommended that useres only use the most recent version of this library.},
+    doi = {10.2172/295438},
+    journal = {},
+    volume = ,
+    place = {United States},
+    year = {1997},
+    month = {9}
+}
+
+@article{osti_5691165,
+    title = {Tables and graphs of electron-interaction cross sections from 10 eV to 100 GeV derived from the LLNL Evaluated Electron Data Library (EEDL), Z = 1--100},
+    author = {Perkins, S T and Cullen, D E and Seltzer, S M},
+    abstractNote = {Energy-dependent evaluated electron interaction cross sections and related parameters are presented for elements H through Fm (Z = 1 to 100). Data are given over the energy range from 10 eV to 100 GeV. Cross sections and average energy deposits are presented in tabulated and graphic form. In addition, ionization cross sections and average energy deposits for each shell are presented in graphic form. This information is derived from the Livermore Evaluated Electron Data Library (EEDL) as of July, 1991.},
+    doi = {10.2172/5691165},
+    number={1},
+    journal = {},
+    volume = ,
+    place = {United States},
+    year = {1991},
+    month = {11}
+}
+
+%% Homestake chemical composition
+@article{Mei_2010,
+   title={Early results on radioactive background characterization for Sanford Laboratory and DUSEL experiments},
+   volume={34},
+   ISSN={0927-6505},
+   url={http://dx.doi.org/10.1016/j.astropartphys.2010.04.003},
+   DOI={10.1016/j.astropartphys.2010.04.003},
+   number={1},
+   journal={Astroparticle Physics},
+   publisher={Elsevier BV},
+   author={Mei, D.-M. and Zhang, C. and Thomas, K. and Gray, F.},
+   year={2010},
+   month={Aug},
+   pages={33–39}
+}
+
+
+%% Gamma ray background of davis cavern.
+@article{Akerib_2020_gray_measurements,
+   title={Measurement of the gamma ray background in the Davis cavern at the Sanford Underground Research Facility},
+   volume={116},
+   ISSN={0927-6505},
+   url={http://dx.doi.org/10.1016/j.astropartphys.2019.102391},
+   DOI={10.1016/j.astropartphys.2019.102391},
+   journal={Astroparticle Physics},
+   publisher={Elsevier BV},
+   author={Akerib, D.S. and Akerlof, C.W. and Alsum, S.K. and Angelides, N. and Araújo, H.M. and Armstrong, J.E. and Arthurs, M. and Bai, X. and Balajthy, J. and Balashov, S. and et al.},
+   year={2020},
+   month={Mar},
+}
+
+
+%%---------------------%%
+%%----- CHAPTER 4 -----%%
+%%---------------------%%
+%
+%% SECTION 4.1 %%
+%
+@article{PARTINGTON1957,
+    abstract = {THE books on radioactivity and physics agree in attributing the discovery of radium emanation to E. or F. Dorn, giving as a reference either Abhl. Naturf. Ges. Halle (1900) or (such as “Geiger and Scheel” and “Wien-Harms”) the same publication, 22, 155 (1900). Mellor adds, “E. Dorn, Ueber die von radioaktiven Substanzen ausgesandte Emanation, Stuttgart, 1900”. The volume of the Abhandlungen der Naturforschenden Gesellschaft zu Halle mentioned, namely, 22, is dated 1900–1, and p. 155 is in the middle of a long article on the flora of Scandinavia.},
+    author = {PARTINGTON, J R},
+    doi = {10.1038/179912a0},
+    issn = {1476-4687},
+    journal = {Nature},
+    number = {4566},
+    pages = {912},
+    title = {{Discovery of Radon}},
+    url = {https://doi.org/10.1038/179912a0},
+    volume = {179},
+    year = {1957}
+}
+
+@misc{scovell_boulby, 
+    title={An Update from the Boulby Underground Laboratory}, url={https://indico.fnal.gov/event/19947/contributions/54719/attachments/34157/41788/DMUK_BoulbyUpdate.pdf}, 
+    journal={Dark Matter UK}, 
+    author={Scovell, Paul}
+}
+%
+%% SECTION 4.2 %%
+%
+@article{radon_emanation_modeling,
+    author = {Sakoda, Akihiro and ISHIMORI, Yuu},
+    year = {2017},
+    month = {01},
+    pages = {296-306},
+    title = {Mechanisms and Modeling Approaches of Radon Emanation for Natural Materials},
+    volume = {52},
+    journal = {Japanese Journal of Health Physics},
+    doi = {10.5453/jhps.52.296}
+}
+%
+%% SECTION 4.3 %%
+%
+%% James Mott Thesis
+@phdthesis{mott_2013,
+      author         = "James Mott",
+      title          = "{Search for double beta decay of $^{82}$Se with the  NEMO-3 detector and development of apparatus for low-level radon measurements for the SuperNEMO experiment}",
+      school         = "University College London",
+      year           = "2013",
+      url            ="",
+}
+
+%% Xin Ran Liu Thesis
+@phdthesis{xin_2017,
+      author         = "Xin Ran Liu",
+      title          = "{Low background techniques for the SuperNEMO experiment}",
+      school         = "University College London",
+      year           = "2017",
+      url            ="",
+}
+
+%% Neutrilisation rates of Po218
+@article{PAGELKOPF20031057,
+    title = "Neutralisation rate and the fraction of the positive $^{218}$Po-clusters in air",
+    journal = "Atmospheric Environment",
+    volume = "37",
+    number = "8",
+    pages = "1057 - 1064",
+    year = "2003",
+    issn = "1352-2310",
+    doi = "https://doi.org/10.1016/S1352-2310(02)00997-4",
+    url = "http://www.sciencedirect.com/science/article/pii/S1352231002009974",
+    author = "P Pagelkopf and J Porstendörfer",
+    keywords = "Neutralisation, Radon decay products, Po-cluster, Fraction of positive Po-clusters, Radioactive aerosols, Environmental radioactivity",
+}
+
+%% Electrostatic detectors for radon detection
+@article{CHOI2001177,
+    title = "Highly sensitive radon monitor and radon emanation rates for detector components",
+    journal = "Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment",
+    volume = "459",
+    number = "1",
+    pages = "177 - 181",
+    year = "2001",
+    issn = "0168-9002",
+    doi = "https://doi.org/10.1016/S0168-9002(00)01004-4",
+    url = "http://www.sciencedirect.com/science/article/pii/S0168900200010044",
+    author = "E. Choi and M. Komori and K. Takahisa and N. Kudomi and K. Kume and K. Hayashi and S. Yoshida and H. Ohsumi and H. Ejiri and T. Kishimoto and K. Matsuoka and S. Tasaka",
+    keywords = "High sensitive radon monitor, Radon concentration, Detector component",
+    abstract = "The radon emanation rates for materials were measured by using the electrostatic precipitation method as a radon monitor. It was found that a low level of radon was emanated from several material components in ELEGANT V. The radon monitor has been developed for the highly sensitive measurements of low-level radon concentration. The system was shown to have a sensitivity to radon concentrations as low as 1.6mBq/m3 for one day measurement. The system was also used as the radon concentration monitor for the gas inside the airtight box of the ELEGANT V at Oto Cosmo Observatory."
+}
+
+%% Development of electrostatic detector used at UCL
+@article{MITSUDA2003414,
+    title = "Development of super-high sensitivity radon detector for the Super-Kamiokande detector",
+    journal = "Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment",
+    volume = "497",
+    number = "2",
+    pages = "414 - 428",
+    year = "2003",
+    issn = "0168-9002",
+    doi = "https://doi.org/10.1016/S0168-9002(02)01923-X",
+    url = "http://www.sciencedirect.com/science/article/pii/S016890020201923X",
+    author = "C Mitsuda and T Kajita and K Miyano and S Moriyama and M Nakahata and Y Takeuchi and S Tasaka",
+    keywords = "Radon, Super-Kamiokande, Electrostatic collection, Photodiode, Membrane",
+    abstract = "A super-high sensitivity radon detector for water which works as a real-time monitor of the radon concentration in water for the Super-Kamiokande detector was developed. Super-high sensitivity was achieved through the utilization of the membrane degassifier module, in addition to factors such as large detector volume, high electrostatic collection voltage, and high-quality electronics. As a result of the calibration study, a sensitivity of 14.6±2.1(stat.+syst.) (counts/day)/(mBq/m3) is achieved. The background level of the radon detector for water is 34.5±5.8(stat.) (counts/day). This corresponds to the detection limit of 0.7mBq/m3 in a one-day measurement."
 }
