--- a/Style/symbol-commands.tex
+++ b/Style/symbol-commands.tex
@@ -1,6 +1,9 @@
 %% Thesis Specific
+%%-----------------------%%
 \newcommand \kevee{$keV_{ee}$}
-\newcommand \kever{$keV_{nr}$}
+\newcommand \kevnr{$keV_{nr}$}
+\newcommand \uBqms{\micro{}Bq/m$^{2}$}
+\newcommand \mBqms{mBq/m$^{2}$}
 
 
 %% Types of interactions %%
@@ -15,10 +18,14 @@
 
 
 %% Physics Related Backgrounds
+%%-----------------------%%
+\newcommand \BeS{$^{7}$Be}
 \newcommand \BE{$^{8}$B}
+\newcommand \NOT{$^{13}$N}
 
-%%--------------------
+
 %% Calibration sources
+%%-----------------------%%
 \newcommand \HT{$^{3}$H}
 \newcommand \COF{$^{14}$C}
 \newcommand \KrETm{$^{83m}$Kr}
@@ -42,6 +49,7 @@
 
 \newcommand \DD{DD}
 
+
 %% Radioactive backgrounds %%
 %%-------------------------%%
 
@@ -56,8 +64,10 @@
 \newcommand \XeOTNm{$^{129m}$Xe}
 \newcommand \XeOTOm{$^{131m}$Xe}
 \newcommand \XeOTT{$^{133}$Xe}
+\newcommand \XeOTF{$^{134}$Xe}
 \newcommand \XeOTS{$^{136}$Xe}
-
+ 
+ 
 %% Other backgrounds
 \newcommand \KFZ{$^{40}$K}
 \newcommand \CoFN{$^{59}$Co}
@@ -79,6 +89,7 @@
 \newcommand \PbTOT{$^{212}$Pb}
 \newcommand \PbTOF{$^{214}$Pb}
 
+\newcommand \BiTOZ{$^{210}$Bi}
 \newcommand \BiTOT{$^{212}$Bi}
 \newcommand \BiTOF{$^{214}$Bi}
 
@@ -157,6 +168,11 @@
 \newcommand \utTT{$^{233}$U}
 \newcommand \geant{\textsc{Geant4}}
 \newcommand \dbd{$0\mathrm{\nu\beta\beta}$}
+
+%% Math Mode Commands %%
+%%-----------------------%%
+\newcommand \mhyphen{\MathText{--}}
+
 
 %% SI Units
 \newcommand \mwe{m.w.e.}
