--- a/load_packages.tex
+++ b/load_packages.tex
@@ -28,7 +28,11 @@
 \captionsetup{format=plain}
 % Dashed Lines
 \usepackage{arydshln}
-
+\usepackage{tabularx}
+% Triangle bullet points 
+\usepackage{amssymb}
+\usepackage{bm}
+\renewcommand{\labelitemi}{$\blacktriangleright$}
 
     
 %% Using Babel allows other languages to be used and mixed-in easily
